Fixed css so that light/dark mode svg are stacked at the same position instead of on top of each other so there is no height discrepancy when changing view

--- a/global/styles/header.css
+++ b/global/styles/header.css
@@ -69,17 +69,24 @@ header {
   margin-left: var(--spacing-lg);
 }
 
-.theme-toggle img{
-  width: var(--header-icons-size);
-  height: auto;
-}
-
 .theme-toggle-button {
+  position: relative;
   background-color: transparent;
-  padding: 6px var(--spacing-sm) var(--spacing-xs);
   border: none;
   cursor: pointer;
   line-height: var(--line-height-none);
+  width: calc(var(--header-icons-size) + var(--spacing-sm) * 2);
+  height: calc(var(--header-icons-size) + 2px + var(--spacing-xs));
+  padding: var(--spacing-sm) var(--spacing-xs);
+}
+
+.theme-toggle img {
+  width: var(--header-icons-size);
+  height: var(--header-icons-size);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .menu-toggle {
